Identity Insert on / off

--- a/DatabaseTests/DatabaseTests.csproj
+++ b/DatabaseTests/DatabaseTests.csproj
@@ -19,4 +19,10 @@
     <ProjectReference Include="..\SqlParser\SqlMemoryDb.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Database Scripts\NorthWind Custom.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
