--- a/SqlParser/SqlMemoryDb.csproj
+++ b/SqlParser/SqlMemoryDb.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="DeepCloner" Version="0.10.2" />
+    <PackageReference Include="Generic.Math" Version="1.0.2" />
     <PackageReference Include="Microsoft.SqlServer.Management.SqlParser" Version="150.37051.0" />
   </ItemGroup>
 
